# KagiNote-App

./: .gitignore  ANALYSIS-UX-IMPLEMENTATIONS.md  BRAND-IDENTITY-DESIGN-SYSTEM.md  CLAUDE.md  DESIGN-METHODOLOGY.md  DESIGN-REQUIREMENTS-V4.md  DESIGN-RESEARCH-FINDINGS.md  DESIGN-SYSTEM-SUMMARY.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-SUMMARY.md  INTEGRATION_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  NAVIGATION_FIX_SUMMARY.md  README.md  RECORDING_SCREEN_MIGRATION_PLAN.md  RECORDING_SCREEN_MIGRATION_SUMMARY.md  SHADCN_MIGRATION.md  TEST_README.md  TRANSCRIPTION_TEST_SUMMARY.md  TRANSCRIPTS_SETTINGS_PAGES_SUMMARY.md  WIREFRAMES-COMPONENT-PATTERNS.md  WIREFRAMES-VISUAL.md  arbitrated-plan-20250820.md  arbitrated-plan-design-integration-20250821.md  component-test-mapping.md  demonstrate_transcription.sh  integration-test.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  test-runner.js  test_demo  test_diarization_demo.rs  test_onnx_direct.rs  tsconfig.json  validate-components.test.js  vite.config.ts  vitest.config.ts
src-tauri/: CLAUDE.md  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/benches/: audio_processing.rs  diarization_performance.rs  transcription_performance.rs
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_speaker_profiles.down.sql  001_create_speaker_profiles.up.sql
src-tauri/seeds/: 001_test_speakers.sql
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/asr/: mod.rs  model_manager.rs  types.rs  whisper.rs
src-tauri/src/audio/: capture.rs  device_profiles.rs  mod.rs  resampler.rs  (+2 more)
src-tauri/tests/: CLAUDE.md  audio_playback_simulator_test.rs  audio_simulator_unit_test.rs  bug_reproduction_tests.rs  diarization_model_tests.rs  diarization_realtime_integration.rs  diarization_realtime_test.rs  integration_tests.rs  lib.rs  model_caching_test.rs  onnx_model_loading_test.rs  performance_test.rs  quality_analyzer_demo.rs  quality_analyzer_integration_test.rs  quality_demo_standalone.rs  real_diarization_transcription_test.rs  simple_validation_test.rs  simple_whisper_test.rs  test_transcription_fix.rs  transcription_comparison_test.rs  transcription_quality_analyzer.rs  transcription_quality_tests.rs  validation_framework_test.rs
(+160 files in other folders)
