[package]
name = "kaginote"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kaginote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio processing
cpal = "0.16.0"
hound = "3.5.1"
dasp = { version = "0.11.0", features = ["signal"] }
rustfft = "6.0.0"
spectrum-analyzer = "1.5.0"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# AI/ML dependencies - Model download capabilities
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
# Whisper.cpp integration with macOS Metal acceleration
whisper-rs = { version = "0.12.0", features = ["metal"] }
# Fallback options (placeholder)
onnxruntime = { version = "0.0.14", optional = true }
candle-core = { version = "0.6.0", optional = true }
candle-nn = { version = "0.6.0", optional = true }

# Utility dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# System monitoring
sysinfo = "0.30.0"
dirs = "5.0.0"

# Security
aes-gcm = "0.10.0"
sha2 = "0.10.0"

# Missing dependencies for implementation
rand = "0.8.0"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
mockall = "0.13"
rstest = "0.21"
serial_test = "3.1"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[features]
default = []
gpu = ["onnxruntime", "candle-core", "candle-nn"]

[[bench]]
name = "audio_processing"
harness = false

[[bench]]
name = "transcription_performance"
harness = false

